# link-grammar

./: .cvsignore  .gitattributes  .gitignore  .npmignore  .travis.yml  AUTHORS  COPYING  ChangeLog  FindLinkGrammar.cmake  LICENSE  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  build.xml.in  configure.ac  configure.in  docker-build.sh  link-grammar.pc.in  link-grammar.spec.in  p.txt  package.json
bindings/: Makefile.am  README  README.md
bindings/autoit/: _LinkGrammar.au3
bindings/java/: Makefile.am  README  build.xml.in  link-grammar-server.sh
bindings/java-jni/: Makefile.am  jni-client.c  jni-client.h  link-grammar-java.def
bindings/js/: build_packages.sh  install_emsdk.sh  publish_packages.sh
bindings/js-npm/: .npmignore  README.md
bindings/lisp/: link-interface.cl
bindings/node.js/: .gitignore  README.md  package.json
bindings/ocaml/: Makefile.am  README.txt  linkgrammar.c  linkgrammar.ml  linkgrammar.mli  utApi.ml  utBatch.ml
bindings/perl/: Makefile.am  README  README.md  example.pl  test.pl
bindings/python/: AUTHORS  LICENSE  Makefile.am  README  README.md  __init__.py.in  example.py  linkgrammar.py  parses-en.txt  setup.py  tests.py
bindings/python-examples/: Makefile.am  README.md  example.py  gen-parses-file.py  lg_testutils.py  parses-amy.txt  parses-any.txt  parses-demo-sql.txt  parses-dialect-en.txt  parses-en.txt  parses-lt.txt  parses-pos-en.txt  parses-pos-he.txt  parses-pos-ru.txt  parses-pos-spell-en.txt  parses-quotes-en.txt  parses-sat-en.txt  parses-th.txt  sentence-check.py  tests.py
bindings/python3/: Makefile.am  README.md
bindings/swig/: link_grammar.i
bindings/vala/: README.md  link-grammar.vapi
data/: Makefile.am  README  command-help-en.txt  fix-len.pl  insert.pl  list_multipos.py  make_unique.py  step01_list_multipos.py  step02_make_unique.py
data/ady/: 4.0.affix  4.0.dict  4.0.regex  Makefile.am
data/amy/: 4.0.affix  4.0.dict  4.0.regex  Makefile.am
data/any/: 4.0.affix  4.0.constituent-knowledge  4.0.dict  4.0.knowledge  4.0.regex  Makefile.am  README.md  affix-punc
data/ar/: 4.0.affix  4.0.batch  4.0.constituent-knowledge  4.0.dict  4.0.knowledge  Makefile.am  corpus-basic.batch
data/de/: 4.0.affix  4.0.batch  4.0.dict  4.0.regex  Makefile.am  corpus-basic.batch
data/demo-atomese/: 4.0.affix  Makefile.am  README.md  atomese-dict.scm  cogserver.dict  storage.dict
data/demo-sql/: 4.0.affix  4.0.constituent-knowledge  4.0.knowledge  Makefile.am  README.md  corpus-basic.batch  dict.db
data/en/: .gitignore  4.0.affix  4.0.batch  4.0.biolg.batch  4.0.constituent-knowledge  4.0.dialect  4.0.dict  4.0.dict.m4  4.0.enwiki.batch  4.0.failures.batch  4.0.fix-long.batch  4.0.fixes.batch  4.0.knowledge  4.0.regex  4.0.voa.batch  Makefile.am  README  corpus-basic.batch  corpus-biolg.batch  corpus-failures.batch  corpus-fix-long.batch  corpus-fix-needed.batch  corpus-fixes.batch  corpus-voa.batch
data/fa/: 4.0.affix  4.0.dict  Makefile.am  README  corpus-basic.batch
data/he/: 4.0.affix  4.0.batch  4.0.dict  4.0.dict.m4  4.0.regex  Makefile.am  corpus-basic.batch
data/id/: 4.0.affix  4.0.dict  4.0.knowledge  4.0.regex  Makefile.am  README.adoc
data/kz/: 4.0.affix  4.0.dict  Makefile.am  corpus-basic.batch
data/lt/: 4.0.affix  4.0.batch  4.0.constituent-knowledge  4.0.dict  4.0.knowledge  4.0.regex  Makefile.am  corpus-basic.batch
data/ru/: 4.0.affix  4.0.batch  4.0.constituent-knowledge  4.0.dict  4.0.knowledge  4.0.morph  4.0.regex  Makefile.am  README  TestLem.pm  base.dict  batch_mode_test3.pl  corpus-basic.batch  example-output.txt  morph-ends.dict  morph.dict  rus.dict  sample-input.txt  sample-output.txt  stem.dict  suffix.dict
data/sql/: README
data/th/: 4.0.affix  4.0.constituent-knowledge  4.0.dialect  4.0.dict  4.0.knowledge  4.0.regex  INPUT_FORMATS.md  LINKDOC.md  Makefile.am  README.md  TAGSETS.md  backup-4.0.dict  corpus-basic.batch  make_unique.py  pos_hierarchy.txt
data/tools/: README  README.md  cluster-pop.pl  delete.pl  dict-splitter.pl  fix-len.pl  insert.pl  membership.pl  wiktionary.pl
data/tr/: 4.0.affix  4.0.batch  4.0.dict  Makefile.am  corpus-basic.batch  suff-list
data/uni/: README
data/vn/: 4.0.affix  4.0.dict  4.0.regex  Makefile.am  corpus-basic.batch  linkgrammar.vi.txt
link-grammar/: .cvsignore  .gitignore  LinkGrammar.java  Makefile.am  README  README.md  analyze-linkage.c  analyze-linkage.h  and.c  and.h  anysplit.c  anysplit.h  api-structures.h  api-types.h  api.c  api.h  build-disjuncts.c  build-disjuncts.h  command-line.c  command-line.h  config.c  connectors.c  connectors.h  const-prime.h  constituents.c  constituents.h  count.c  count.h  dict-api.h  dict-common.c  dict-common.h  dict-structures.h  dictionary.c  disjunct-utils.c  disjunct-utils.h  disjuncts.c  disjuncts.h  error.c  error.h  expand.c  (+87 more)
link-grammar/autoit/: _LinkGrammar.au3
link-grammar/java/: README
link-parser/: Makefile.am  command-line.c  command-line.h  generator-utilities.c  generator-utilities.h  lg_readline.c  lg_readline.h  lg_xdg.c  lg_xdg.h  link-generator.c  link-parser.c  parser-utilities.c  parser-utilities.h  prefix.c  prefix.h
man/: Makefile.am  grammar-parse.1  link-generator.1  link-grammar.1  link-parser.1  link-parser.man1
msvc9/: LinkGrammar.sln  LinkGrammar.vcproj  LinkGrammarExe.vcproj  LinkGrammarExe.vcxproj.filters  LinkGrammarJava.vcproj  LinkGrammarJava.vcxproj  LinkGrammarJava.vcxproj.filters  Makefile.am  README
tests/: Makefile.am  all.kal  dict-reopen.cc  mem-leak.cc  multi-dict.cc  multi-java.cc  multi-thread.cc
viterbi/: Makefile.am  README  README.atombase  atom-types.cc  atom-types.h  atom.cc  atom.h  compile-base.cc  compile-base.h  compile-lg.h  compile.cc  compile.h  compress.cc  connect.cc  connect.h  connector-utils.cc  connector-utils.h  disjoin.cc  disjoin.h  environment.cc  environment.h  garbage.cc  garbage.h  parser.cc  parser.h  rewrite.h  state.cc  state.h  subspace.cc  subspace.h  test-cost.cc  test-disjoin.cc  test-env.cc  test-header.h  test-parser.cc  upcast.cc  viterbi.h  vitest.cc  word-monad.cc  word-monad.h
(+857 files in other folders)
